{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 21,
  "lineage": "3bfd8cd1-270b-5cc2-23cc-632cfdb958a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dba2cb6798deb6d8",
            "arn": "arn:aws:ec2:us-east-1:654654549066:instance/i-08a6e60b08bba61cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a6e60b08bba61cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "master_key2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8bdccdf8e36f877",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "public_ip": "54.83.150.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080917c202e3941cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a61c32e05d5ccd9a",
            "tags": {
              "Name": "web_instance"
            },
            "tags_all": {
              "Name": "web_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5d8a9035f122dc8"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.web_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654549066:internet-gateway/igw-096d28b4b9006cb15",
            "id": "igw-096d28b4b9006cb15",
            "owner_id": "654654549066",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-095d73c3b1030c412"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654549066:route-table/rtb-0160abbd4713661e5",
            "id": "rtb-0160abbd4713661e5",
            "owner_id": "654654549066",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096d28b4b9006cb15",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web_route_table"
            },
            "tags_all": {
              "Name": "web_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d73c3b1030c412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cd4fccd5a85d0e0",
            "route_table_id": "rtb-0160abbd4713661e5",
            "subnet_id": "subnet-0a61c32e05d5ccd9a"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.web_route_table",
            "aws_subnet.web_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654549066:security-group/sg-0f5d8a9035f122dc8",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5d8a9035f122dc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "654654549066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sg"
            },
            "tags_all": {
              "Name": "web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-095d73c3b1030c412"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654549066:subnet/subnet-0a61c32e05d5ccd9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a61c32e05d5ccd9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654549066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_subnet"
            },
            "tags_all": {
              "Name": "web_subnet"
            },
            "vpc_id": "vpc-095d73c3b1030c412"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654549066:vpc/vpc-095d73c3b1030c412",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0138296bf894b9d86",
            "default_route_table_id": "rtb-0b6aeb39ee765deb1",
            "default_security_group_id": "sg-0e3ed191a15f92cbd",
            "dhcp_options_id": "dopt-0faab2c88faaccfa7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095d73c3b1030c412",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6aeb39ee765deb1",
            "owner_id": "654654549066",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}